
package com.corrigeaqui.models.enums;

public enum ReportStatus {
    PENDING,
    REVIEWED,
    REJECTED
}
